--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+picosocks5 (0.6) unstable; urgency=medium
+
+  * Implemented BIND request.
+
+ -- Alec Kojaev <alec@home.kojaev.name>  Thu, 09 May 2019 23:48:59 +0300
+
 picosocks5 (0.5) unstable; urgency=medium
 
   * Can now build with GnuTLS.
