--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+picosocks5 (0.8) unstable; urgency=medium
+
+  * Implemented read/write timeout for all connections.
+
+ -- Alec Kojaev <alec@home.kojaev.name>  Wed, 22 Apr 2020 22:20:27 +0300
+
 picosocks5 (0.7) unstable; urgency=medium
 
   * Refactored INI file parser.
