--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+picosocks5 (0.11) UNRELEASED; urgency=medium
+
+  * Significant refactoring.
+  * ACL: Option to limit request types and destinations.
+  * Second field in the password file is repurposed, no longer
+    specifies authentication type.
+
+ -- Alec Kojaev <alec.kojaev@gmail.com>  Thu, 18 Feb 2021 00:36:02 +0300
+
 picosocks5 (0.10) unstable; urgency=medium
 
   * Various fixes for bugs found by static analysis.
