--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-picosocks5 (0.11) UNRELEASED; urgency=medium
+picosocks5 (0.11) unstable; urgency=medium
 
   * Significant refactoring.
   * ACL: Option to limit request types and destinations.
   * Second field in the password file is repurposed, no longer
     specifies authentication type.
 
- -- Alec Kojaev <alec.kojaev@gmail.com>  Thu, 18 Feb 2021 00:36:02 +0300
+ -- Alec Kojaev <alec.kojaev@gmail.com>  Sat, 20 Feb 2021 20:32:11 +0300
 
 picosocks5 (0.10) unstable; urgency=medium
 
