--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+picosocks5 (0.12) UNRELEASED; urgency=medium
+
+  * Configuration file now allows named sections for group ACL sets.
+
+ -- Alec Kojaev <alec.kojaev@gmail.com>  Thu, 25 Feb 2021 21:09:49 +0300
+
 picosocks5 (0.11) unstable; urgency=medium
 
   * Significant refactoring.
