--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-picosocks5 (0.12) UNRELEASED; urgency=medium
+picosocks5 (0.12) unstable; urgency=medium
 
   * Configuration file now allows named sections for group ACL sets.
   * ACL: Full support for ACL sets.
 
- -- Alec Kojaev <alec.kojaev@gmail.com>  Thu, 25 Feb 2021 21:09:49 +0300
+ -- Alec Kojaev <alec.kojaev@gmail.com>  Fri, 26 Feb 2021 22:49:27 +0300
 
 picosocks5 (0.11) unstable; urgency=medium
 
