--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+picosocks5 (0.13) UNRELEASED; urgency=medium
+
+  * Only allow anonymous auth method to networks allowed
+    by the default ACL set.
+
+ -- Alec Kojaev <alec.kojaev@gmail.com>  Sun, 07 Mar 2021 15:40:52 +0300
+
 picosocks5 (0.12) unstable; urgency=medium
 
   * Configuration file now allows named sections for group ACL sets.
