--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-picosocks5 (0.13) UNRELEASED; urgency=medium
+picosocks5 (0.13) unstable; urgency=medium
 
   * Only allow anonymous auth method to networks allowed
     by the default ACL set.
   * Use internal HMAC-MD5 implementation when no crypto
     library is available.
 
- -- Alec Kojaev <alec.kojaev@gmail.com>  Sun, 07 Mar 2021 15:40:52 +0300
+ -- Alec Kojaev <alec.kojaev@gmail.com>  Wed, 24 Mar 2021 00:23:56 +0300
 
 picosocks5 (0.12) unstable; urgency=medium
 
