--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 picosocks5 (0.14) UNRELEASED; urgency=medium
 
   * Use `getentropy(3)` for PRNG, if available.
+  * Make `pis5user` independent from selected crypto module.
 
  -- Alec Kojaev <alec.kojaev@gmail.com>  Sat, 27 Mar 2021 01:39:35 +0300
 
