--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-picosocks5 (0.14) UNRELEASED; urgency=medium
+picosocks5 (0.14) unstable; urgency=medium
 
   * Use `getentropy(3)` for PRNG, if available. Otherwise,
     use direct reading from `/dev/urandom`.
   * Make `pis5user` independent from selected crypto module.
 
- -- Alec Kojaev <alec.kojaev@gmail.com>  Sat, 27 Mar 2021 01:39:35 +0300
+ -- Alec Kojaev <alec.kojaev@gmail.com>  Sat, 19 Jun 2021 22:47:42 +0300
 
 picosocks5 (0.13) unstable; urgency=medium
 
